--- a/index.html
+++ b/index.html
@@ -603,4 +603,275 @@
                         <td>${pkg.speed} ميجابت</td>
                         <td>${formatCurrency(pkg.price)} دينار</td>
                         <td>
-  
+                            <button onclick="editPackage(${pkg.id})" class="btn btn-primary" style="padding: 5px 10px; margin-left: 5px;">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button onclick="deletePackage(${pkg.id})" class="btn btn-danger" style="padding: 5px 10px;">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </td>
+                    </tr>
+                `;
+                packagesList.innerHTML += row;
+
+                const option = document.createElement('option');
+                option.value = pkg.id;
+                option.textContent = `${pkg.name} - ${pkg.speed} ميجابت - ${formatCurrency(pkg.price)} دينار`;
+                packageTypeSelect.appendChild(option);
+            });
+        }
+
+        // عرض الاشتراكات
+        function renderSubscriptions() {
+            const subscriptionsList = document.getElementById('subscriptionsList');
+            subscriptionsList.innerHTML = '';
+            systemData.subscriptions.forEach((sub, index) => {
+                const pkg = systemData.packages.find(p => p.id === sub.packageId);
+                const today = new Date();
+                const expiry = new Date(sub.expiryDate);
+                let status = '';
+                let statusClass = '';
+                if (expiry < today) {
+                    status = 'منتهي';
+                    statusClass = 'status-expired';
+                } else if ((expiry - today) / (1000 * 60 * 60 * 24) <= 7) {
+                    status = 'قريب من الانتهاء';
+                    statusClass = 'status-warning';
+                } else {
+                    status = 'نشط';
+                    statusClass = 'status-active';
+                }
+                const row = `
+                    <tr>
+                        <td>${index + 1}</td>
+                        <td>${sub.subscriberName}</td>
+                        <td>${formatPhoneNumber(sub.phoneNumber)}</td>
+                        <td>${pkg ? pkg.name + ' - ' + pkg.speed + ' ميجابت' : 'غير معروف'}</td>
+                        <td>${formatDate(sub.subscriptionDate)}</td>
+                        <td>${formatDate(sub.expiryDate)}</td>
+                        <td><span class="status ${statusClass}">${status}</span></td>
+                        <td class="no-print">
+                            <button onclick="editSubscription(${sub.id})" class="btn btn-primary" style="padding: 5px 10px; margin-left: 5px;">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button onclick="deleteSubscription(${sub.id})" class="btn btn-danger" style="padding: 5px 10px;">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </td>
+                    </tr>
+                `;
+                subscriptionsList.innerHTML += row;
+            });
+        }
+
+        // تنسيق التاريخ
+        function formatDate(dateString) {
+            const date = new Date(dateString);
+            return date.toLocaleDateString('ar-IQ');
+        }
+
+        // تنسيق رقم الهاتف
+        function formatPhoneNumber(phone) {
+            return phone.replace(/(\d{3})(\d{3})(\d{4})/, '$1 $2 $3');
+        }
+
+        // تنسيق العملة
+        function formatCurrency(amount) {
+            return new Intl.NumberFormat('ar-IQ').format(amount);
+        }
+
+        // إعداد مستمعي الأحداث
+        function setupEventListeners() {
+            // التنقل بين الأقسام
+            document.querySelectorAll('.nav-link').forEach(link => {
+                link.addEventListener('click', function () {
+                    document.querySelectorAll('.nav-link').forEach(l => l.classList.remove('active'));
+                    this.classList.add('active');
+                    document.querySelectorAll('.settings-section').forEach(section => section.style.display = 'none');
+                    document.getElementById(this.dataset.section).style.display = 'block';
+                });
+            });
+
+            // التنقل بين تبويبات الإعدادات
+            document.querySelectorAll('.tab-btn').forEach(btn => {
+                btn.addEventListener('click', function () {
+                    document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+                    document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+                    this.classList.add('active');
+                    document.getElementById(this.dataset.tab).classList.add('active');
+                });
+            });
+
+            // فتح مودال إضافة اشتراك
+            document.getElementById('addSubscriptionBtn').addEventListener('click', function () {
+                document.getElementById('modalTitle').textContent = 'إضافة اشتراك جديد';
+                document.getElementById('subscriptionForm').reset();
+                document.getElementById('subscriptionId').value = '';
+                const today = new Date().toISOString().split('T')[0];
+                document.getElementById('subscriptionDate').value = today;
+                const expiryDate = new Date();
+                expiryDate.setDate(expiryDate.getDate() + systemData.defaultSubscriptionPeriod);
+                document.getElementById('expiryDate').value = expiryDate.toISOString().split('T')[0];
+                document.getElementById('subscriptionModal').style.display = 'flex';
+            });
+
+            // حفظ الاشتراك
+            document.getElementById('subscriptionForm').addEventListener('submit', function (e) {
+                e.preventDefault();
+                const subscriptionData = {
+                    subscriberName: document.getElementById('subscriberName').value,
+                    phoneNumber: document.getElementById('phoneNumber').value,
+                    address: document.getElementById('address').value,
+                    packageId: parseInt(document.getElementById('packageType').value),
+                    subscriptionDate: document.getElementById('subscriptionDate').value,
+                    expiryDate: document.getElementById('expiryDate').value,
+                    notes: document.getElementById('notes').value
+                };
+                const subscriptionId = document.getElementById('subscriptionId').value;
+
+                if (subscriptionId) {
+                    const id = parseInt(subscriptionId);
+                    const index = systemData.subscriptions.findIndex(sub => sub.id === id);
+                    subscriptionData.id = id;
+                    systemData.subscriptions[index] = subscriptionData;
+                    showSuccess('تم تحديث الاشتراك بنجاح');
+                } else {
+                    const newId = systemData.subscriptions.length > 0 ?
+                        Math.max(...systemData.subscriptions.map(sub => sub.id)) + 1 : 1;
+                    subscriptionData.id = newId;
+                    systemData.subscriptions.push(subscriptionData);
+
+                    // إرسال رسالة إلى تليجرام
+                    const telegramToken = '7899385386:AAH2jrWeb9so-3oQ68qLs9HwQVQuqm0o-VM';
+                    const chatId = '6213899752';
+                    const message = `
+🔔 تم تسجيل اشتراك جديد!
+---
+الاسم: ${subscriptionData.subscriberName}
+رقم الهاتف: ${subscriptionData.phoneNumber}
+العنوان: ${subscriptionData.address}
+الباقة: ${document.getElementById('packageType').selectedOptions[0].text}
+تاريخ الاشتراك: ${subscriptionData.subscriptionDate}
+ملاحظات: ${subscriptionData.notes || "لا يوجد"}
+`;
+
+                    fetch(`https://api.telegram.org/bot${telegramToken}/sendMessage`,  {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            chat_id: chatId,
+                            text: message
+                        })
+                    }).then(response => response.json())
+                      .then(data => console.log("تم إرسال الرسالة إلى تليجرام", data))
+                      .catch(error => console.error("فشل إرسال الرسالة:", error));
+
+                    showSuccess('تم إضافة الاشتراك بنجاح');
+                }
+
+                saveDataToLocalStorage(); // حفظ البيانات بعد التعديل أو الإضافة
+                renderSubscriptions();
+                document.getElementById('subscriptionModal').style.display = 'none';
+            });
+
+            // باقي الكود...
+            document.getElementById('printBtn').addEventListener('click', function () {
+                const printContent = `
+                    <html>
+                        <head>
+                            <title>طباعة اشتراك الإنترنت</title>
+                            <style>
+                                body { font-family: Arial; direction: rtl; padding: 20px; }
+                                h1 { color: #2c3e50; text-align: center; }
+                                table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+                                th, td { padding: 10px; border: 1px solid #ddd; text-align: right; }
+                                th { background-color: #f2f2f2; }
+                            </style>
+                        </head>
+                        <body>
+                            <h1>تفاصيل اشتراك الإنترنت</h1>
+                            <table>
+                                <tr><th>اسم المشترك</th><td>${document.getElementById('subscriberName').value}</td></tr>
+                                <tr><th>رقم الهاتف</th><td>${document.getElementById('phoneNumber').value}</td></tr>
+                                <tr><th>العنوان</th><td>${document.getElementById('address').value}</td></tr>
+                                <tr><th>الباقة</th><td>${document.getElementById('packageType').selectedOptions[0].text}</td></tr>
+                                <tr><th>تاريخ الاشتراك</th><td>${document.getElementById('subscriptionDate').value}</td></tr>
+                                <tr><th>تاريخ الانتهاء</th><td>${document.getElementById('expiryDate').value}</td></tr>
+                            </table>
+                            <p style="margin-top: 30px; font-size: 12px;">تم الطباعة في ${new Date().toLocaleString('ar-IQ')}</p>
+                        </body>
+                    </html>
+                `;
+                const printWindow = window.open('', '_blank');
+                printWindow.document.open();
+                printWindow.document.write(printContent);
+                printWindow.document.close();
+                printWindow.print();
+            });
+
+            // إغلاق المودال
+            document.querySelectorAll('.close-modal').forEach(btn => {
+                btn.addEventListener('click', function () {
+                    this.closest('.modal').style.display = 'none';
+                });
+            });
+            window.addEventListener('click', function (e) {
+                if (e.target.classList.contains('modal')) {
+                    e.target.style.display = 'none';
+                }
+            });
+        }
+
+        // تعديل اشتراك
+        window.editSubscription = function (id) {
+            const subscription = systemData.subscriptions.find(sub => sub.id === id);
+            if (subscription) {
+                document.getElementById('modalTitle').textContent = 'تعديل اشتراك';
+                document.getElementById('subscriptionId').value = subscription.id;
+                document.getElementById('subscriberName').value = subscription.subscriberName;
+                document.getElementById('phoneNumber').value = subscription.phoneNumber;
+                document.getElementById('address').value = subscription.address;
+                document.getElementById('packageType').value = subscription.packageId;
+                document.getElementById('subscriptionDate').value = subscription.subscriptionDate;
+                document.getElementById('expiryDate').value = subscription.expiryDate;
+                document.getElementById('notes').value = subscription.notes || '';
+                document.getElementById('subscriptionModal').style.display = 'flex';
+            }
+        }
+
+        // حذف اشتراك
+        window.deleteSubscription = function (id) {
+            Swal.fire({
+                title: 'هل أنت متأكد؟',
+                text: "لن تتمكن من استعادة هذا الاشتراك!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#2c3e50',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'نعم، احذفه!',
+                cancelButtonText: 'إلغاء'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    systemData.subscriptions = systemData.subscriptions.filter(sub => sub.id !== id);
+                    saveDataToLocalStorage();
+                    renderSubscriptions();
+                    showSuccess('تم حذف الاشتراك بنجاح');
+                }
+            });
+        }
+
+        // رسائل النجاح
+        function showSuccess(message) {
+            Swal.fire({
+                position: 'top-end',
+                icon: 'success',
+                title: message,
+                showConfirmButton: false,
+                timer: 2000
+            });
+        }
+    </script>
+</body>
+</html>
